packages/ppx_factory.0.1.0/test/deriver/errors/factory_abstract_type.ml
type t = int
[@@deriving factory]
