packages/ppx_factory.0.1.0/test/deriver/errors/factory_abstract_type.old.expected
File "factory_abstract_type.ml", line 1, characters 0-33:
Error: ppx_factory.factory: cannot derive from abstract type. Has to be a record or variant type.
